content/v1.4/Using Price Feeds/reference-contracts/ethereum-addresses.md
---
title: "Ethereum Price Feeds"
slug: "ethereum-addresses"
hidden: false
metadata: 
  description: "Chainlink Price Feeds on Ethereum Blockchains"
  image: 
    0: "https://files.readme.io/7b2bdfc-670379d-OpenGraph_V3.png"
    1: "670379d-OpenGraph_V3.png"
    2: 1459
    3: 1459
    4: "#dbe1f8"
createdAt: "2020-11-05T09:18:16.027Z"
updatedAt: "2021-01-07T10:17:36.536Z"
---
For implementation instructions, please refer to [Get the Latest Price](doc:get-the-latest-price).

# Mainnet

> 🚧 
>
> We strongly recommend that you try deploying first on a testnet. Then move to mainnet.

|Pair|Contract|
|:---|:---|
|AAVE / ETH|<a href='https://etherscan.io/address/0x6Df09E975c830ECae5bd4eD9d90f3A95a4f88012' target='_blank' rel='noreferrer, noopener'>`0x6Df09E975c830ECae5bd4eD9d90f3A95a4f88012`</a>|
|AAVE / USD|<a href='https://etherscan.io/address/0x547a514d5e3769680Ce22B2361c10Ea13619e8a9' target='_blank' rel='noreferrer, noopener'>`0x547a514d5e3769680Ce22B2361c10Ea13619e8a9`</a>|
|ADA / USD|<a href='https://etherscan.io/address/0xAE48c91dF1fE419994FFDa27da09D5aC69c30f55' target='_blank' rel='noreferrer, noopener'>`0xAE48c91dF1fE419994FFDa27da09D5aC69c30f55`</a>|
|ADX / USD|<a href='https://etherscan.io/address/0x231e764B44b2C1b7Ca171fa8021A24ed520Cde10' target='_blank' rel='noreferrer, noopener'>`0x231e764B44b2C1b7Ca171fa8021A24ed520Cde10`</a>|
|ANT / ETH|<a href='https://etherscan.io/address/0x8f83670260F8f7708143b836a2a6F11eF0aBac01' target='_blank' rel='noreferrer, noopener'>`0x8f83670260F8f7708143b836a2a6F11eF0aBac01`</a>|
|AUD / USD|<a href='https://etherscan.io/address/0x77F9710E7d0A19669A13c055F62cd80d313dF022' target='_blank' rel='noreferrer, noopener'>`0x77F9710E7d0A19669A13c055F62cd80d313dF022`</a>|
|BAL / ETH|<a href='https://etherscan.io/address/0xC1438AA3823A6Ba0C159CfA8D98dF5A994bA120b' target='_blank' rel='noreferrer, noopener'>`0xC1438AA3823A6Ba0C159CfA8D98dF5A994bA120b`</a>|
|BAT / ETH|<a href='https://etherscan.io/address/0x0d16d4528239e9ee52fa531af613AcdB23D88c94' target='_blank' rel='noreferrer, noopener'>`0x0d16d4528239e9ee52fa531af613AcdB23D88c94`</a>|
|BCH / USD|<a href='https://etherscan.io/address/0x9F0F69428F923D6c95B781F89E165C9b2df9789D' target='_blank' rel='noreferrer, noopener'>`0x9F0F69428F923D6c95B781F89E165C9b2df9789D`</a>|
|BNB / USD|<a href='https://etherscan.io/address/0x14e613AC84a31f709eadbdF89C6CC390fDc9540A' target='_blank' rel='noreferrer, noopener'>`0x14e613AC84a31f709eadbdF89C6CC390fDc9540A`</a>|
|BNT / ETH|<a href='https://etherscan.io/address/0xCf61d1841B178fe82C8895fe60c2EDDa08314416' target='_blank' rel='noreferrer, noopener'>`0xCf61d1841B178fe82C8895fe60c2EDDa08314416`</a>|
|BNT / USD|<a href='https://etherscan.io/address/0x1E6cF0D433de4FE882A437ABC654F58E1e78548c' target='_blank' rel='noreferrer, noopener'>`0x1E6cF0D433de4FE882A437ABC654F58E1e78548c`</a>|
|BRENT / USD|<a href='https://etherscan.io/address/0xb70ba475F1a6b5396e46d9b2a5f7081080Dc9d09' target='_blank' rel='noreferrer, noopener'>`0xb70ba475F1a6b5396e46d9b2a5f7081080Dc9d09`</a>|
|BTC / ARS|<a href='https://etherscan.io/address/0xA912dd6b62B1C978e205B86994E057B1b494D73a' target='_blank' rel='noreferrer, noopener'>`0xA912dd6b62B1C978e205B86994E057B1b494D73a`</a>|
|BTC / ETH|<a href='https://etherscan.io/address/0xdeb288F737066589598e9214E782fa5A8eD689e8' target='_blank' rel='noreferrer, noopener'>`0xdeb288F737066589598e9214E782fa5A8eD689e8`</a>|
|BTC / USD|<a href='https://etherscan.io/address/0xF4030086522a5bEEa4988F8cA5B36dbC97BeE88c' target='_blank' rel='noreferrer, noopener'>`0xF4030086522a5bEEa4988F8cA5B36dbC97BeE88c`</a>|
|BTC Difficulty|<a href='https://etherscan.io/address/0xA792Ebd0E4465DB2657c7971519Cfa0f0275F428' target='_blank' rel='noreferrer, noopener'>`0xA792Ebd0E4465DB2657c7971519Cfa0f0275F428`</a>|
|BUSD / ETH|<a href='https://etherscan.io/address/0x614715d2Af89E6EC99A233818275142cE88d1Cfd' target='_blank' rel='noreferrer, noopener'>`0x614715d2Af89E6EC99A233818275142cE88d1Cfd`</a>|
|BZRX / ETH|<a href='https://etherscan.io/address/0x8f7C7181Ed1a2BA41cfC3f5d064eF91b67daef66' target='_blank' rel='noreferrer, noopener'>`0x8f7C7181Ed1a2BA41cfC3f5d064eF91b67daef66`</a>|
|CHF / USD|<a href='https://etherscan.io/address/0x449d117117838fFA61263B61dA6301AA2a88B13A' target='_blank' rel='noreferrer, noopener'>`0x449d117117838fFA61263B61dA6301AA2a88B13A`</a>|
|COMP / ETH|<a href='https://etherscan.io/address/0x1B39Ee86Ec5979ba5C322b826B3ECb8C79991699' target='_blank' rel='noreferrer, noopener'>`0x1B39Ee86Ec5979ba5C322b826B3ECb8C79991699`</a>|
|COMP / USD|<a href='https://etherscan.io/address/0xdbd020CAeF83eFd542f4De03e3cF0C28A4428bd5' target='_blank' rel='noreferrer, noopener'>`0xdbd020CAeF83eFd542f4De03e3cF0C28A4428bd5`</a>|
|CRO / ETH|<a href='https://etherscan.io/address/0xcA696a9Eb93b81ADFE6435759A29aB4cf2991A96' target='_blank' rel='noreferrer, noopener'>`0xcA696a9Eb93b81ADFE6435759A29aB4cf2991A96`</a>|
|DAI / ETH|<a href='https://etherscan.io/address/0x773616E4d11A78F511299002da57A0a94577F1f4' target='_blank' rel='noreferrer, noopener'>`0x773616E4d11A78F511299002da57A0a94577F1f4`</a>|
|DAI / USD|<a href='https://etherscan.io/address/0xAed0c38402a5d19df6E4c03F4E2DceD6e29c1ee9' target='_blank' rel='noreferrer, noopener'>`0xAed0c38402a5d19df6E4c03F4E2DceD6e29c1ee9`</a>|
|DASH / USD|<a href='https://etherscan.io/address/0xFb0cADFEa136E9E343cfb55B863a6Df8348ab912' target='_blank' rel='noreferrer, noopener'>`0xFb0cADFEa136E9E343cfb55B863a6Df8348ab912`</a>|
|DMG / ETH|<a href='https://etherscan.io/address/0xD010e899f7ab723AC93f825cDC5Aa057669557c2' target='_blank' rel='noreferrer, noopener'>`0xD010e899f7ab723AC93f825cDC5Aa057669557c2`</a>|
|ENJ / ETH|<a href='https://etherscan.io/address/0x24D9aB51950F3d62E9144fdC2f3135DAA6Ce8D1B' target='_blank' rel='noreferrer, noopener'>`0x24D9aB51950F3d62E9144fdC2f3135DAA6Ce8D1B`</a>|
|EOS / USD|<a href='https://etherscan.io/address/0x10a43289895eAff840E8d45995BBa89f9115ECEe' target='_blank' rel='noreferrer, noopener'>`0x10a43289895eAff840E8d45995BBa89f9115ECEe`</a>|
|ETC / USD|<a href='https://etherscan.io/address/0xaEA2808407B7319A31A383B6F8B60f04BCa23cE2' target='_blank' rel='noreferrer, noopener'>`0xaEA2808407B7319A31A383B6F8B60f04BCa23cE2`</a>|
|ETH / USD|<a href='https://etherscan.io/address/0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419' target='_blank' rel='noreferrer, noopener'>`0x5f4eC3Df9cbd43714FE2740f5E3616155c5b8419`</a>|
|ETH / XDR|<a href='https://etherscan.io/address/0xb022E2970b3501d8d83eD07912330d178543C1eB' target='_blank' rel='noreferrer, noopener'>`0xb022E2970b3501d8d83eD07912330d178543C1eB`</a>|
|EUR / USD|<a href='https://etherscan.io/address/0xb49f677943BC038e9857d61E7d053CaA2C1734C1' target='_blank' rel='noreferrer, noopener'>`0xb49f677943BC038e9857d61E7d053CaA2C1734C1`</a>|
|FNX / USD|<a href='https://etherscan.io/address/0x80070f7151BdDbbB1361937ad4839317af99AE6c' target='_blank' rel='noreferrer, noopener'>`0x80070f7151BdDbbB1361937ad4839317af99AE6c`</a>|
|FTSE / GBP|<a href='https://etherscan.io/address/0xE23FA0e8dd05D6f66a6e8c98cab2d9AE82A7550c' target='_blank' rel='noreferrer, noopener'>`0xE23FA0e8dd05D6f66a6e8c98cab2d9AE82A7550c`</a>|
|Fast Gas / Gwei|<a href='https://etherscan.io/address/0x169E633A2D1E6c10dD91238Ba11c4A708dfEF37C' target='_blank' rel='noreferrer, noopener'>`0x169E633A2D1E6c10dD91238Ba11c4A708dfEF37C`</a>|
|GBP / USD|<a href='https://etherscan.io/address/0x5c0Ab2d9b5a7ed9f470386e82BB36A3613cDd4b5' target='_blank' rel='noreferrer, noopener'>`0x5c0Ab2d9b5a7ed9f470386e82BB36A3613cDd4b5`</a>|
|JPY / USD|<a href='https://etherscan.io/address/0xBcE206caE7f0ec07b545EddE332A47C2F75bbeb3' target='_blank' rel='noreferrer, noopener'>`0xBcE206caE7f0ec07b545EddE332A47C2F75bbeb3`</a>|
|KNC / ETH|<a href='https://etherscan.io/address/0x656c0544eF4C98A6a98491833A89204Abb045d6b' target='_blank' rel='noreferrer, noopener'>`0x656c0544eF4C98A6a98491833A89204Abb045d6b`</a>|
|KNC / USD|<a href='https://etherscan.io/address/0xf8fF43E991A81e6eC886a3D281A2C6cC19aE70Fc' target='_blank' rel='noreferrer, noopener'>`0xf8fF43E991A81e6eC886a3D281A2C6cC19aE70Fc`</a>|
|LINK / ETH (Bancor)|<a href='https://etherscan.io/address/0xFf2c64f454EAf1b9ee8c204404A73E287A567A44' target='_blank' rel='noreferrer, noopener'>`0xFf2c64f454EAf1b9ee8c204404A73E287A567A44`</a>|
|LINK / ETH|<a href='https://etherscan.io/address/0xDC530D9457755926550b59e8ECcdaE7624181557' target='_blank' rel='noreferrer, noopener'>`0xDC530D9457755926550b59e8ECcdaE7624181557`</a>|
|LINK / USD|<a href='https://etherscan.io/address/0x2c1d072e956AFFC0D435Cb7AC38EF18d24d9127c' target='_blank' rel='noreferrer, noopener'>`0x2c1d072e956AFFC0D435Cb7AC38EF18d24d9127c`</a>|
|LRC / ETH|<a href='https://etherscan.io/address/0x160AC928A16C93eD4895C2De6f81ECcE9a7eB7b4' target='_blank' rel='noreferrer, noopener'>`0x160AC928A16C93eD4895C2De6f81ECcE9a7eB7b4`</a>|
|LTC / USD|<a href='https://etherscan.io/address/0x6AF09DF7563C363B5763b9102712EbeD3b9e859B' target='_blank' rel='noreferrer, noopener'>`0x6AF09DF7563C363B5763b9102712EbeD3b9e859B`</a>|
|MANA / ETH|<a href='https://etherscan.io/address/0x82A44D92D6c329826dc557c5E1Be6ebeC5D5FeB9' target='_blank' rel='noreferrer, noopener'>`0x82A44D92D6c329826dc557c5E1Be6ebeC5D5FeB9`</a>|
|MKR / ETH|<a href='https://etherscan.io/address/0x24551a8Fb2A7211A25a17B1481f043A8a8adC7f2' target='_blank' rel='noreferrer, noopener'>`0x24551a8Fb2A7211A25a17B1481f043A8a8adC7f2`</a>|
|MLN / ETH|<a href='https://etherscan.io/address/0xDaeA8386611A157B08829ED4997A8A62B557014C' target='_blank' rel='noreferrer, noopener'>`0xDaeA8386611A157B08829ED4997A8A62B557014C`</a>|
|N225 / JPY|<a href='https://etherscan.io/address/0x5c4939a2ab3A2a9f93A518d81d4f8D0Bc6a68980' target='_blank' rel='noreferrer, noopener'>`0x5c4939a2ab3A2a9f93A518d81d4f8D0Bc6a68980`</a>|
|NMR / ETH|<a href='https://etherscan.io/address/0x9cB2A01A7E64992d32A34db7cEea4c919C391f6A' target='_blank' rel='noreferrer, noopener'>`0x9cB2A01A7E64992d32A34db7cEea4c919C391f6A`</a>|
|OXT / USD|<a href='https://etherscan.io/address/0xd75AAaE4AF0c398ca13e2667Be57AF2ccA8B5de6' target='_blank' rel='noreferrer, noopener'>`0xd75AAaE4AF0c398ca13e2667Be57AF2ccA8B5de6`</a>|
|Orchid|<a href='https://etherscan.io/address/0xa175FA75795c6Fb2aFA48B72d22054ee0DeDa4aC' target='_blank' rel='noreferrer, noopener'>`0xa175FA75795c6Fb2aFA48B72d22054ee0DeDa4aC`</a>|
|RCN / BTC|<a href='https://etherscan.io/address/0xEa0b3DCa635f4a4E77D9654C5c18836EE771566e' target='_blank' rel='noreferrer, noopener'>`0xEa0b3DCa635f4a4E77D9654C5c18836EE771566e`</a>|
|REN / ETH (Bancor)|<a href='https://etherscan.io/address/0xF9680D99D6C9589e2a93a78A04A279e509205945' target='_blank' rel='noreferrer, noopener'>`0xF9680D99D6C9589e2a93a78A04A279e509205945`</a>|
|REN / ETH|<a href='https://etherscan.io/address/0x3147D7203354Dc06D9fd350c7a2437bcA92387a4' target='_blank' rel='noreferrer, noopener'>`0x3147D7203354Dc06D9fd350c7a2437bcA92387a4`</a>|
|REN / USD|<a href='https://etherscan.io/address/0x0f59666EDE214281e956cb3b2D0d69415AfF4A01' target='_blank' rel='noreferrer, noopener'>`0x0f59666EDE214281e956cb3b2D0d69415AfF4A01`</a>|
|REP / ETH|<a href='https://etherscan.io/address/0xD4CE430C3b67b3E2F7026D86E7128588629e2455' target='_blank' rel='noreferrer, noopener'>`0xD4CE430C3b67b3E2F7026D86E7128588629e2455`</a>|
|RLC / ETH|<a href='https://etherscan.io/address/0x4cba1e1fdc738D0fe8DB3ee07728E2Bc4DA676c6' target='_blank' rel='noreferrer, noopener'>`0x4cba1e1fdc738D0fe8DB3ee07728E2Bc4DA676c6`</a>|
|SNX / ETH|<a href='https://etherscan.io/address/0x79291A9d692Df95334B1a0B3B4AE6bC606782f8c' target='_blank' rel='noreferrer, noopener'>`0x79291A9d692Df95334B1a0B3B4AE6bC606782f8c`</a>|
|SNX / USD|<a href='https://etherscan.io/address/0xDC3EA94CD0AC27d9A86C180091e7f78C683d3699' target='_blank' rel='noreferrer, noopener'>`0xDC3EA94CD0AC27d9A86C180091e7f78C683d3699`</a>|
|SUSD / ETH|<a href='https://etherscan.io/address/0x8e0b7e6062272B5eF4524250bFFF8e5Bd3497757' target='_blank' rel='noreferrer, noopener'>`0x8e0b7e6062272B5eF4524250bFFF8e5Bd3497757`</a>|
|SXP / USD|<a href='https://etherscan.io/address/0xFb0CfD6c19e25DB4a08D8a204a387cEa48Cc138f' target='_blank' rel='noreferrer, noopener'>`0xFb0CfD6c19e25DB4a08D8a204a387cEa48Cc138f`</a>|
|TRX / USD|<a href='https://etherscan.io/address/0xacD0D1A29759CC01E8D925371B72cb2b5610EA25' target='_blank' rel='noreferrer, noopener'>`0xacD0D1A29759CC01E8D925371B72cb2b5610EA25`</a>|
|TUSD / ETH|<a href='https://etherscan.io/address/0x3886BA987236181D98F2401c507Fb8BeA7871dF2' target='_blank' rel='noreferrer, noopener'>`0x3886BA987236181D98F2401c507Fb8BeA7871dF2`</a>|
|TUSD Reserves|<a href='https://etherscan.io/address/0x478f4c42b877c697C4b19E396865D4D533EcB6ea' target='_blank' rel='noreferrer, noopener'>`0x478f4c42b877c697C4b19E396865D4D533EcB6ea`</a>|
|TUSD Supply|<a href='https://etherscan.io/address/0x807b029DD462D5d9B9DB45dff90D3414013B969e' target='_blank' rel='noreferrer, noopener'>`0x807b029DD462D5d9B9DB45dff90D3414013B969e`</a>|
|Total Marketcap / USD|<a href='https://etherscan.io/address/0xEC8761a0A73c34329CA5B1D3Dc7eD07F30e836e2' target='_blank' rel='noreferrer, noopener'>`0xEC8761a0A73c34329CA5B1D3Dc7eD07F30e836e2`</a>|
|UMA / ETH|<a href='https://etherscan.io/address/0xf817B69EA583CAFF291E287CaE00Ea329d22765C' target='_blank' rel='noreferrer, noopener'>`0xf817B69EA583CAFF291E287CaE00Ea329d22765C`</a>|
|UNI / ETH|<a href='https://etherscan.io/address/0xD6aA3D25116d8dA79Ea0246c4826EB951872e02e' target='_blank' rel='noreferrer, noopener'>`0xD6aA3D25116d8dA79Ea0246c4826EB951872e02e`</a>|
|USDC / ETH|<a href='https://etherscan.io/address/0x986b5E1e1755e3C2440e960477f25201B0a8bbD4' target='_blank' rel='noreferrer, noopener'>`0x986b5E1e1755e3C2440e960477f25201B0a8bbD4`</a>|
|USDK / USD|<a href='https://etherscan.io/address/0xfAC81Ea9Dd29D8E9b212acd6edBEb6dE38Cb43Af' target='_blank' rel='noreferrer, noopener'>`0xfAC81Ea9Dd29D8E9b212acd6edBEb6dE38Cb43Af`</a>|
|USDT / ETH|<a href='https://etherscan.io/address/0xEe9F2375b4bdF6387aa8265dD4FB8F16512A1d46' target='_blank' rel='noreferrer, noopener'>`0xEe9F2375b4bdF6387aa8265dD4FB8F16512A1d46`</a>|
|WNXM / ETH|<a href='https://etherscan.io/address/0xe5Dc0A609Ab8bCF15d3f35cFaa1Ff40f521173Ea' target='_blank' rel='noreferrer, noopener'>`0xe5Dc0A609Ab8bCF15d3f35cFaa1Ff40f521173Ea`</a>|
|WOM / ETH|<a href='https://etherscan.io/address/0xcEBD2026d3C99F2a7CE028acf372C154aB4638a9' target='_blank' rel='noreferrer, noopener'>`0xcEBD2026d3C99F2a7CE028acf372C154aB4638a9`</a>|
|XAG / USD|<a href='https://etherscan.io/address/0x379589227b15F1a12195D3f2d90bBc9F31f95235' target='_blank' rel='noreferrer, noopener'>`0x379589227b15F1a12195D3f2d90bBc9F31f95235`</a>|
|XAU / USD|<a href='https://etherscan.io/address/0x214eD9Da11D2fbe465a6fc601a91E62EbEc1a0D6' target='_blank' rel='noreferrer, noopener'>`0x214eD9Da11D2fbe465a6fc601a91E62EbEc1a0D6`</a>|
|XHV / USD|<a href='https://etherscan.io/address/0xeccBeEd9691d8521385259AE596CF00D68429de0' target='_blank' rel='noreferrer, noopener'>`0xeccBeEd9691d8521385259AE596CF00D68429de0`</a>|
|XMR / USD|<a href='https://etherscan.io/address/0xFA66458Cce7Dd15D8650015c4fce4D278271618F' target='_blank' rel='noreferrer, noopener'>`0xFA66458Cce7Dd15D8650015c4fce4D278271618F`</a>|
|XRP / USD|<a href='https://etherscan.io/address/0xCed2660c6Dd1Ffd856A5A82C67f3482d88C50b12' target='_blank' rel='noreferrer, noopener'>`0xCed2660c6Dd1Ffd856A5A82C67f3482d88C50b12`</a>|
|XTZ / USD|<a href='https://etherscan.io/address/0x5239a625dEb44bF3EeAc2CD5366ba24b8e9DB63F' target='_blank' rel='noreferrer, noopener'>`0x5239a625dEb44bF3EeAc2CD5366ba24b8e9DB63F`</a>|
|YFI / ETH|<a href='https://etherscan.io/address/0x7c5d4F8345e66f68099581Db340cd65B078C41f4' target='_blank' rel='noreferrer, noopener'>`0x7c5d4F8345e66f68099581Db340cd65B078C41f4`</a>|
|ZRX / ETH|<a href='https://etherscan.io/address/0x2Da4983a622a8498bb1a21FaE9D8F6C664939962' target='_blank' rel='noreferrer, noopener'>`0x2Da4983a622a8498bb1a21FaE9D8F6C664939962`</a>|
|sCEX / USD|<a href='https://etherscan.io/address/0x283D433435cFCAbf00263beEF6A362b7cc5ed9f2' target='_blank' rel='noreferrer, noopener'>`0x283D433435cFCAbf00263beEF6A362b7cc5ed9f2`</a>|
|sDEFI / USD|<a href='https://etherscan.io/address/0xa8E875F94138B0C5b51d1e1d5dE35bbDdd28EA87' target='_blank' rel='noreferrer, noopener'>`0xa8E875F94138B0C5b51d1e1d5dE35bbDdd28EA87`</a>|

# Kovan

|Pair|Contract|
|:---|:---|
|AAVE / ETH|<a href='https://kovan.etherscan.io/address/0xd04647B7CB523bb9f26730E9B6dE1174db7591Ad' target='_blank' rel='noreferrer, noopener'>`0xd04647B7CB523bb9f26730E9B6dE1174db7591Ad`</a>|
|AMPL / ETH|<a href='https://kovan.etherscan.io/address/0x562C092bEb3a6DF77aDf0BB604F52c018E4f2814' target='_blank' rel='noreferrer, noopener'>`0x562C092bEb3a6DF77aDf0BB604F52c018E4f2814`</a>|
|AUD / USD|<a href='https://kovan.etherscan.io/address/0x5813A90f826e16dB392abd2aF7966313fc1fd5B8' target='_blank' rel='noreferrer, noopener'>`0x5813A90f826e16dB392abd2aF7966313fc1fd5B8`</a>|
|BAT / ETH|<a href='https://kovan.etherscan.io/address/0x0e4fcEC26c9f85c3D714370c98f43C4E02Fc35Ae' target='_blank' rel='noreferrer, noopener'>`0x0e4fcEC26c9f85c3D714370c98f43C4E02Fc35Ae`</a>|
|BAT / USD|<a href='https://kovan.etherscan.io/address/0x8e67A0CFfbbF6A346ce87DFe06daE2dc782b3219' target='_blank' rel='noreferrer, noopener'>`0x8e67A0CFfbbF6A346ce87DFe06daE2dc782b3219`</a>|
|BNB / USD|<a href='https://kovan.etherscan.io/address/0x8993ED705cdf5e84D0a3B754b5Ee0e1783fcdF16' target='_blank' rel='noreferrer, noopener'>`0x8993ED705cdf5e84D0a3B754b5Ee0e1783fcdF16`</a>|
|BTC / ETH|<a href='https://kovan.etherscan.io/address/0xF7904a295A029a3aBDFFB6F12755974a958C7C25' target='_blank' rel='noreferrer, noopener'>`0xF7904a295A029a3aBDFFB6F12755974a958C7C25`</a>|
|BTC / USD|<a href='https://kovan.etherscan.io/address/0x6135b13325bfC4B00278B4abC5e20bbce2D6580e' target='_blank' rel='noreferrer, noopener'>`0x6135b13325bfC4B00278B4abC5e20bbce2D6580e`</a>|
|BUSD / ETH|<a href='https://kovan.etherscan.io/address/0xbF7A18ea5DE0501f7559144e702b29c55b055CcB' target='_blank' rel='noreferrer, noopener'>`0xbF7A18ea5DE0501f7559144e702b29c55b055CcB`</a>|
|BZRX / ETH|<a href='https://kovan.etherscan.io/address/0x9aa9da35DC44F93D90436BfE256f465f720c3Ae5' target='_blank' rel='noreferrer, noopener'>`0x9aa9da35DC44F93D90436BfE256f465f720c3Ae5`</a>|
|CHF / USD|<a href='https://kovan.etherscan.io/address/0xed0616BeF04D374969f302a34AE4A63882490A8C' target='_blank' rel='noreferrer, noopener'>`0xed0616BeF04D374969f302a34AE4A63882490A8C`</a>|
|DAI / ETH|<a href='https://kovan.etherscan.io/address/0x22B58f1EbEDfCA50feF632bD73368b2FdA96D541' target='_blank' rel='noreferrer, noopener'>`0x22B58f1EbEDfCA50feF632bD73368b2FdA96D541`</a>|
|DAI / USD|<a href='https://kovan.etherscan.io/address/0x777A68032a88E5A84678A77Af2CD65A7b3c0775a' target='_blank' rel='noreferrer, noopener'>`0x777A68032a88E5A84678A77Af2CD65A7b3c0775a`</a>|
|ENJ / ETH|<a href='https://kovan.etherscan.io/address/0xfaDbe2ee798889F02d1d39eDaD98Eff4c7fe95D4' target='_blank' rel='noreferrer, noopener'>`0xfaDbe2ee798889F02d1d39eDaD98Eff4c7fe95D4`</a>|
|ETH / USDT RSI 4h|<a href='https://kovan.etherscan.io/address/0x10900f50d1bC46b4Ed796C50A4Cc63791CaF7501' target='_blank' rel='noreferrer, noopener'>`0x10900f50d1bC46b4Ed796C50A4Cc63791CaF7501`</a>|
|ETH / USD|<a href='https://kovan.etherscan.io/address/0x9326BFA02ADD2366b30bacB125260Af641031331' target='_blank' rel='noreferrer, noopener'>`0x9326BFA02ADD2366b30bacB125260Af641031331`</a>|
|EUR / USD|<a href='https://kovan.etherscan.io/address/0x0c15Ab9A0DB086e062194c273CC79f41597Bbf13' target='_blank' rel='noreferrer, noopener'>`0x0c15Ab9A0DB086e062194c273CC79f41597Bbf13`</a>|
|Ferrari F12 TDF / USD|<a href='https://kovan.etherscan.io/address/0x22a2D07993A1A18b3b86E56F960fa735b6D6cFD9' target='_blank' rel='noreferrer, noopener'>`0x22a2D07993A1A18b3b86E56F960fa735b6D6cFD9`</a>|
|GBP / USD|<a href='https://kovan.etherscan.io/address/0x28b0061f44E6A9780224AA61BEc8C3Fcb0d37de9' target='_blank' rel='noreferrer, noopener'>`0x28b0061f44E6A9780224AA61BEc8C3Fcb0d37de9`</a>|
|JPY / USD|<a href='https://kovan.etherscan.io/address/0xD627B1eF3AC23F1d3e576FA6206126F3c1Bd0942' target='_blank' rel='noreferrer, noopener'>`0xD627B1eF3AC23F1d3e576FA6206126F3c1Bd0942`</a>|
|KNC / ETH|<a href='https://kovan.etherscan.io/address/0xb8E8130d244CFd13a75D6B9Aee029B1C33c808A7' target='_blank' rel='noreferrer, noopener'>`0xb8E8130d244CFd13a75D6B9Aee029B1C33c808A7`</a>|
|LINK / ETH|<a href='https://kovan.etherscan.io/address/0x3Af8C569ab77af5230596Acf0E8c2F9351d24C38' target='_blank' rel='noreferrer, noopener'>`0x3Af8C569ab77af5230596Acf0E8c2F9351d24C38`</a>|
|LINK / USD|<a href='https://kovan.etherscan.io/address/0x396c5E36DD0a0F5a5D33dae44368D4193f69a1F0' target='_blank' rel='noreferrer, noopener'>`0x396c5E36DD0a0F5a5D33dae44368D4193f69a1F0`</a>|
|LTC / USD|<a href='https://kovan.etherscan.io/address/0xCeE03CF92C7fFC1Bad8EAA572d69a4b61b6D4640' target='_blank' rel='noreferrer, noopener'>`0xCeE03CF92C7fFC1Bad8EAA572d69a4b61b6D4640`</a>|
|MANA / ETH|<a href='https://kovan.etherscan.io/address/0x1b93D8E109cfeDcBb3Cc74eD761DE286d5771511' target='_blank' rel='noreferrer, noopener'>`0x1b93D8E109cfeDcBb3Cc74eD761DE286d5771511`</a>|
|MKR / ETH|<a href='https://kovan.etherscan.io/address/0x0B156192e04bAD92B6C1C13cf8739d14D78D5701' target='_blank' rel='noreferrer, noopener'>`0x0B156192e04bAD92B6C1C13cf8739d14D78D5701`</a>|
|ORN / USDT|<a href='https://kovan.etherscan.io/address/0x66413F734E69C2C41B4902024D0C5C3A86b8EcD2' target='_blank' rel='noreferrer, noopener'>`0x66413F734E69C2C41B4902024D0C5C3A86b8EcD2`</a>|
|Oil / USD|<a href='https://kovan.etherscan.io/address/0x48c9FF5bFD7D12e3C511022A6E54fB1c5b8DC3Ea' target='_blank' rel='noreferrer, noopener'>`0x48c9FF5bFD7D12e3C511022A6E54fB1c5b8DC3Ea`</a>|
|REN / ETH|<a href='https://kovan.etherscan.io/address/0xF1939BECE7708382b5fb5e559f630CB8B39a10ee' target='_blank' rel='noreferrer, noopener'>`0xF1939BECE7708382b5fb5e559f630CB8B39a10ee`</a>|
|REP / ETH|<a href='https://kovan.etherscan.io/address/0x3A7e6117F2979EFf81855de32819FBba48a63e9e' target='_blank' rel='noreferrer, noopener'>`0x3A7e6117F2979EFf81855de32819FBba48a63e9e`</a>|
|SNX / ETH|<a href='https://kovan.etherscan.io/address/0xF9A76ae7a1075Fe7d646b06fF05Bd48b9FA5582e' target='_blank' rel='noreferrer, noopener'>`0xF9A76ae7a1075Fe7d646b06fF05Bd48b9FA5582e`</a>|
|SNX / USD|<a href='https://kovan.etherscan.io/address/0x31f93DA9823d737b7E44bdee0DF389Fe62Fd1AcD' target='_blank' rel='noreferrer, noopener'>`0x31f93DA9823d737b7E44bdee0DF389Fe62Fd1AcD`</a>|
|SUSD / ETH|<a href='https://kovan.etherscan.io/address/0xb343e7a1aF578FA35632435243D814e7497622f7' target='_blank' rel='noreferrer, noopener'>`0xb343e7a1aF578FA35632435243D814e7497622f7`</a>|
|TRX / USD|<a href='https://kovan.etherscan.io/address/0x9477f0E5bfABaf253eacEE3beE3ccF08b46cc79c' target='_blank' rel='noreferrer, noopener'>`0x9477f0E5bfABaf253eacEE3beE3ccF08b46cc79c`</a>|
|TUSD / ETH|<a href='https://kovan.etherscan.io/address/0x7aeCF1c19661d12E962b69eBC8f6b2E63a55C660' target='_blank' rel='noreferrer, noopener'>`0x7aeCF1c19661d12E962b69eBC8f6b2E63a55C660`</a>|
|UNI / ETH|<a href='https://kovan.etherscan.io/address/0x17756515f112429471F86f98D5052aCB6C47f6ee' target='_blank' rel='noreferrer, noopener'>`0x17756515f112429471F86f98D5052aCB6C47f6ee`</a>|
|USDC / ETH|<a href='https://kovan.etherscan.io/address/0x64EaC61A2DFda2c3Fa04eED49AA33D021AeC8838' target='_blank' rel='noreferrer, noopener'>`0x64EaC61A2DFda2c3Fa04eED49AA33D021AeC8838`</a>|
|USDT / ETH|<a href='https://kovan.etherscan.io/address/0x0bF499444525a23E7Bb61997539725cA2e928138' target='_blank' rel='noreferrer, noopener'>`0x0bF499444525a23E7Bb61997539725cA2e928138`</a>|
|XAG / USD|<a href='https://kovan.etherscan.io/address/0x4594051c018Ac096222b5077C3351d523F93a963' target='_blank' rel='noreferrer, noopener'>`0x4594051c018Ac096222b5077C3351d523F93a963`</a>|
|XAU / USD|<a href='https://kovan.etherscan.io/address/0xc8fb5684f2707C82f28595dEaC017Bfdf44EE9c5' target='_blank' rel='noreferrer, noopener'>`0xc8fb5684f2707C82f28595dEaC017Bfdf44EE9c5`</a>|
|XRP / USD|<a href='https://kovan.etherscan.io/address/0x3eA2b7e3ed9EA9120c3d6699240d1ff2184AC8b3' target='_blank' rel='noreferrer, noopener'>`0x3eA2b7e3ed9EA9120c3d6699240d1ff2184AC8b3`</a>|
|XTZ / USD|<a href='https://kovan.etherscan.io/address/0xC6F39246494F25BbCb0A8018796890037Cb5980C' target='_blank' rel='noreferrer, noopener'>`0xC6F39246494F25BbCb0A8018796890037Cb5980C`</a>|
|YFI / ETH|<a href='https://kovan.etherscan.io/address/0xC5d1B1DEb2992738C0273408ac43e1e906086B6C' target='_blank' rel='noreferrer, noopener'>`0xC5d1B1DEb2992738C0273408ac43e1e906086B6C`</a>|
|ZRX / ETH|<a href='https://kovan.etherscan.io/address/0xBc3f28Ccc21E9b5856E81E6372aFf57307E2E883' target='_blank' rel='noreferrer, noopener'>`0xBc3f28Ccc21E9b5856E81E6372aFf57307E2E883`</a>|
|sCEX / USD|<a href='https://kovan.etherscan.io/address/0xA85646318D20C684f6251097d24A6e74Fe1ED5eB' target='_blank' rel='noreferrer, noopener'>`0xA85646318D20C684f6251097d24A6e74Fe1ED5eB`</a>|
|sDEFI / USD|<a href='https://kovan.etherscan.io/address/0x70179FB2F3A0a5b7FfB36a235599De440B0922ea' target='_blank' rel='noreferrer, noopener'>`0x70179FB2F3A0a5b7FfB36a235599De440B0922ea`</a>|

# Rinkeby

|Pair|Contract|
|:---|:---|
|AUD / USD|<a href='https://rinkeby.etherscan.io/address/0x21c095d2aDa464A294956eA058077F14F66535af' target='_blank' rel='noreferrer, noopener'>`0x21c095d2aDa464A294956eA058077F14F66535af`</a>|
|BAT / USD|<a href='https://rinkeby.etherscan.io/address/0x031dB56e01f82f20803059331DC6bEe9b17F7fC9' target='_blank' rel='noreferrer, noopener'>`0x031dB56e01f82f20803059331DC6bEe9b17F7fC9`</a>|
|BNB / USD|<a href='https://rinkeby.etherscan.io/address/0xcf0f51ca2cDAecb464eeE4227f5295F2384F84ED' target='_blank' rel='noreferrer, noopener'>`0xcf0f51ca2cDAecb464eeE4227f5295F2384F84ED`</a>|
|BTC / ETH|<a href='https://rinkeby.etherscan.io/address/0x2431452A0010a43878bF198e170F6319Af6d27F4' target='_blank' rel='noreferrer, noopener'>`0x2431452A0010a43878bF198e170F6319Af6d27F4`</a>|
|BTC / USD|<a href='https://rinkeby.etherscan.io/address/0xECe365B379E1dD183B20fc5f022230C044d51404' target='_blank' rel='noreferrer, noopener'>`0xECe365B379E1dD183B20fc5f022230C044d51404`</a>|
|BTC IV 1d|<a href='https://rinkeby.etherscan.io/address/0x696b6Fb2b093df94C428Efa68d6e7849702D9419' target='_blank' rel='noreferrer, noopener'>`0x696b6Fb2b093df94C428Efa68d6e7849702D9419`</a>|
|BTC IV 1w|<a href='https://rinkeby.etherscan.io/address/0x1e15C98a7A4cE165777b3cc615BffEeBA947054c' target='_blank' rel='noreferrer, noopener'>`0x1e15C98a7A4cE165777b3cc615BffEeBA947054c`</a>|
|BTC IV 2d|<a href='https://rinkeby.etherscan.io/address/0x4378815024B852c5D291F7bb8B0862a46ab8d637' target='_blank' rel='noreferrer, noopener'>`0x4378815024B852c5D291F7bb8B0862a46ab8d637`</a>|
|BTC IV 2w|<a href='https://rinkeby.etherscan.io/address/0x2E5fE124e84333F3e04F30EfE057603dcB665945' target='_blank' rel='noreferrer, noopener'>`0x2E5fE124e84333F3e04F30EfE057603dcB665945`</a>|
|BTC IV 3w|<a href='https://rinkeby.etherscan.io/address/0xB58F22d1cacC00507b4346F0C3469B637A0f42B7' target='_blank' rel='noreferrer, noopener'>`0xB58F22d1cacC00507b4346F0C3469B637A0f42B7`</a>|
|BTC IV 4w|<a href='https://rinkeby.etherscan.io/address/0xeA68a3c16251fD28035e752aBBa4D7eE3015870e' target='_blank' rel='noreferrer, noopener'>`0xeA68a3c16251fD28035e752aBBa4D7eE3015870e`</a>|
|CHF / USD|<a href='https://rinkeby.etherscan.io/address/0x5e601CF5EF284Bcd12decBDa189479413284E1d2' target='_blank' rel='noreferrer, noopener'>`0x5e601CF5EF284Bcd12decBDa189479413284E1d2`</a>|
|DAI / ETH|<a href='https://rinkeby.etherscan.io/address/0x74825DbC8BF76CC4e9494d0ecB210f676Efa001D' target='_blank' rel='noreferrer, noopener'>`0x74825DbC8BF76CC4e9494d0ecB210f676Efa001D`</a>|
|DAI / USD|<a href='https://rinkeby.etherscan.io/address/0x2bA49Aaa16E6afD2a993473cfB70Fa8559B523cF' target='_blank' rel='noreferrer, noopener'>`0x2bA49Aaa16E6afD2a993473cfB70Fa8559B523cF`</a>|
|ETH / USD|<a href='https://rinkeby.etherscan.io/address/0x8A753747A1Fa494EC906cE90E9f37563A8AF630e' target='_blank' rel='noreferrer, noopener'>`0x8A753747A1Fa494EC906cE90E9f37563A8AF630e`</a>|
|ETH IV 1d|<a href='https://rinkeby.etherscan.io/address/0x99d837840c374A08C0bF0EE3bc16b84F1a29A640' target='_blank' rel='noreferrer, noopener'>`0x99d837840c374A08C0bF0EE3bc16b84F1a29A640`</a>|
|ETH IV 1w|<a href='https://rinkeby.etherscan.io/address/0xFbAc690D8e5c2f3a2D2929B1dD78E42AD53f464a' target='_blank' rel='noreferrer, noopener'>`0xFbAc690D8e5c2f3a2D2929B1dD78E42AD53f464a`</a>|
|ETH IV 2d|<a href='https://rinkeby.etherscan.io/address/0xB03755573e8068ef172ba0BD826dc62Fa7Ed32f7' target='_blank' rel='noreferrer, noopener'>`0xB03755573e8068ef172ba0BD826dc62Fa7Ed32f7`</a>|
|ETH IV 2w|<a href='https://rinkeby.etherscan.io/address/0x9125759a01d14AeFe7c2426EFD20130B8FEabeBa' target='_blank' rel='noreferrer, noopener'>`0x9125759a01d14AeFe7c2426EFD20130B8FEabeBa`</a>|
|ETH IV 3w|<a href='https://rinkeby.etherscan.io/address/0x0772C3bbF1469313C39ad59214582ecFA1fAB583' target='_blank' rel='noreferrer, noopener'>`0x0772C3bbF1469313C39ad59214582ecFA1fAB583`</a>|
|ETH IV 4w|<a href='https://rinkeby.etherscan.io/address/0x727B59d0989d6D1961138122BC9F94f534E82B32' target='_blank' rel='noreferrer, noopener'>`0x727B59d0989d6D1961138122BC9F94f534E82B32`</a>|
|EUR / USD|<a href='https://rinkeby.etherscan.io/address/0x78F9e60608bF48a1155b4B2A5e31F32318a1d85F' target='_blank' rel='noreferrer, noopener'>`0x78F9e60608bF48a1155b4B2A5e31F32318a1d85F`</a>|
|FNX / USD|<a href='https://rinkeby.etherscan.io/address/0xcf74110A02b1D391B27cE37364ABc3b279B1d9D1' target='_blank' rel='noreferrer, noopener'>`0xcf74110A02b1D391B27cE37364ABc3b279B1d9D1`</a>|
|GBP / USD|<a href='https://rinkeby.etherscan.io/address/0x7B17A813eEC55515Fb8F49F2ef51502bC54DD40F' target='_blank' rel='noreferrer, noopener'>`0x7B17A813eEC55515Fb8F49F2ef51502bC54DD40F`</a>|
|JPY / USD|<a href='https://rinkeby.etherscan.io/address/0x3Ae2F46a2D84e3D5590ee6Ee5116B80caF77DeCA' target='_blank' rel='noreferrer, noopener'>`0x3Ae2F46a2D84e3D5590ee6Ee5116B80caF77DeCA`</a>|
|LINK / USD|<a href='https://rinkeby.etherscan.io/address/0xd8bD0a1cB028a31AA859A21A3758685a95dE4623' target='_blank' rel='noreferrer, noopener'>`0xd8bD0a1cB028a31AA859A21A3758685a95dE4623`</a>|
|LTC / USD|<a href='https://rinkeby.etherscan.io/address/0x4d38a35C2D87976F334c2d2379b535F1D461D9B4' target='_blank' rel='noreferrer, noopener'>`0x4d38a35C2D87976F334c2d2379b535F1D461D9B4`</a>|
|MktCap / USD|<a href='https://rinkeby.etherscan.io/address/0x9Dcf949BCA2F4A8a62350E0065d18902eE87Dca3' target='_blank' rel='noreferrer, noopener'>`0x9Dcf949BCA2F4A8a62350E0065d18902eE87Dca3`</a>|
|Oil / USD|<a href='https://rinkeby.etherscan.io/address/0x6292aA9a6650aE14fbf974E5029f36F95a1848Fd' target='_blank' rel='noreferrer, noopener'>`0x6292aA9a6650aE14fbf974E5029f36F95a1848Fd`</a>|
|REP / USD|<a href='https://rinkeby.etherscan.io/address/0x9331b55D9830EF609A2aBCfAc0FBCE050A52fdEa' target='_blank' rel='noreferrer, noopener'>`0x9331b55D9830EF609A2aBCfAc0FBCE050A52fdEa`</a>|
|SNX / USD|<a href='https://rinkeby.etherscan.io/address/0xE96C4407597CD507002dF88ff6E0008AB41266Ee' target='_blank' rel='noreferrer, noopener'>`0xE96C4407597CD507002dF88ff6E0008AB41266Ee`</a>|
|TRX / USD|<a href='https://rinkeby.etherscan.io/address/0xb29f616a0d54FF292e997922fFf46012a63E2FAe' target='_blank' rel='noreferrer, noopener'>`0xb29f616a0d54FF292e997922fFf46012a63E2FAe`</a>|
|USDC / ETH|<a href='https://rinkeby.etherscan.io/address/0xdCA36F27cbC4E38aE16C4E9f99D39b42337F6dcf' target='_blank' rel='noreferrer, noopener'>`0xdCA36F27cbC4E38aE16C4E9f99D39b42337F6dcf`</a>|
|USDC / USD|<a href='https://rinkeby.etherscan.io/address/0xa24de01df22b63d23Ebc1882a5E3d4ec0d907bFB' target='_blank' rel='noreferrer, noopener'>`0xa24de01df22b63d23Ebc1882a5E3d4ec0d907bFB`</a>|
|XAG / USD|<a href='https://rinkeby.etherscan.io/address/0x9c1946428f4f159dB4889aA6B218833f467e1BfD' target='_blank' rel='noreferrer, noopener'>`0x9c1946428f4f159dB4889aA6B218833f467e1BfD`</a>|
|XAU / USD|<a href='https://rinkeby.etherscan.io/address/0x81570059A0cb83888f1459Ec66Aad1Ac16730243' target='_blank' rel='noreferrer, noopener'>`0x81570059A0cb83888f1459Ec66Aad1Ac16730243`</a>|
|XFT / USD|<a href='https://rinkeby.etherscan.io/address/0xab4a352ac35dFE83221220D967Db41ee61A0DeFa' target='_blank' rel='noreferrer, noopener'>`0xab4a352ac35dFE83221220D967Db41ee61A0DeFa`</a>|
|XRP / USD|<a href='https://rinkeby.etherscan.io/address/0xc3E76f41CAbA4aB38F00c7255d4df663DA02A024' target='_blank' rel='noreferrer, noopener'>`0xc3E76f41CAbA4aB38F00c7255d4df663DA02A024`</a>|
|XTZ / USD|<a href='https://rinkeby.etherscan.io/address/0xf57FCa8B932c43dFe560d3274262b2597BCD2e5A' target='_blank' rel='noreferrer, noopener'>`0xf57FCa8B932c43dFe560d3274262b2597BCD2e5A`</a>|
|ZRX / USD|<a href='https://rinkeby.etherscan.io/address/0xF7Bbe4D7d13d600127B6Aa132f1dCea301e9c8Fc' target='_blank' rel='noreferrer, noopener'>`0xF7Bbe4D7d13d600127B6Aa132f1dCea301e9c8Fc`</a>|
|sCEX / USD|<a href='https://rinkeby.etherscan.io/address/0x1a602D4928faF0A153A520f58B332f9CAFF320f7' target='_blank' rel='noreferrer, noopener'>`0x1a602D4928faF0A153A520f58B332f9CAFF320f7`</a>|
|sDEFI / USD|<a href='https://rinkeby.etherscan.io/address/0x0630521aC362bc7A19a4eE44b57cE72Ea34AD01c' target='_blank' rel='noreferrer, noopener'>`0x0630521aC362bc7A19a4eE44b57cE72Ea34AD01c`</a>|